mysql_db.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql_db
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
  type: ClusterIP
